added main page header

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,12 +59,15 @@
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                 <ul class="list-inline list-unstyled text-center text-lg-right my-0">
                     <li class="list-inline-item dropdown">
+<!--hanckle here will be the parent menu-->                        
                         <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
                                 <p class="my-0">My Account</p>
                             </div>
                         </a>
+<!--parent menu ends here-->  
+<!--Djando tags-->                        
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
@@ -77,7 +80,9 @@
                                 <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
                             {% endif %}
                         </div>
+<!--Djando tags ends here-->                        
                     </li>
+<!--shopping bag link-->                    
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="">
                             <div class="text-center">
@@ -92,6 +97,7 @@
                             </div>
                         </a>
                     </li>
+<!--shopping bag link ends-->                    
                 </ul>
             </div>
         </div>
